<resources>
    <string name="app_name">Quizzy</string>

    <!--  s t a r t  -->
    <string name="welcome_text">Selamat datang di kuis millionare</string>
    <string name="get_started">Mari mulai</string>

    <!--  s c r e e n  t i t l e  -->
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>

    <!--  b u t t o n  -->
    <string name="next">Selanjutnya</string>
    <string name="share">Bagikan</string>
    <string name="finish">Selesai</string>

    <!--  r e s u l t  -->
    <string name="jawaban_benar1">Jawaban benar : %1$s</string>
    <string name="jawaban_kamu1">Jawaban kamu : %1$s</string>
    <string name="jawaban_benar2">Jawaban benar : %1$s</string>
    <string name="jawaban_kamu2">Jawaban kamu : %1$s</string>
    <string name="jawaban_benar3">Jawaban benar : %1$s</string>
    <string name="jawaban_kamu3">Jawaban kamu : %1$s</string>
    <string name="score">Skor kamu : %1$s</string>

    <!--  q u e s t i o n s  -->
    <string name="q_1">What does BBC stand for?</string>
    <string name="q_2">What\'s the name of the river that runs through Egypt?</string>
    <string name="q_3">For one point, what five basic senses do humans have? (separated the answers by the commas [,])</string>

    <!--  a n s w e r  -->
    <string name="ans_1">jawaban pertama</string>
    <string name="ans_3">jawaban ketiga</string>
    <string name="ans_2">jawaban kedua</string>
</resources>