<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="56dp"
    tools:context=".question.QuestionTwoActivity">

    <TextView
        style="@style/TextWidth.ScreenTitle"
        android:text="@string/question_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextWidth.QuestionWithBg"
        android:text="@string/q_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        style="@style/AnswerButton.First"
        android:id="@+id/first_ans_btn2"
        android:text="@string/ans_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        style="@style/AnswerButton"
        android:id="@+id/second_ans_btn2"
        android:text="@string/ans_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_ans_btn2" />

    <Button
        style="@style/AnswerButton"
        android:id="@+id/third_ans_btn2"
        android:text="@string/ans_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_ans_btn2" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/Guideline"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="49dp" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/Guideline"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_end="263dp" />
</androidx.constraintlayout.widget.ConstraintLayout>